sandbox/output
SearchStepDef.java:8: error: cannot find symbol
    public void theTextContent(List<String> text) throws Throwable {
                               ^
  symbol:   class List
  location: class SearchStepDef
1 error
